ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: az-app-ig
  labels:
    name: az-app-ig
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: azure-go-app
            port: 
              name: go-app-port
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: webui
            port: 
              name: web-port
